# vexy-lines-py

./: README.md  build.sh  install.sh  mkdocs.yml  publish.sh  pyproject.toml
.omc/state/: subagent-tracking.json
docs/: 404.html  index.html
docs/api-reference/: index.html
docs/changelog/: index.html
docs/examples/: index.html
docs/file-format/: index.html
docs/installation/: index.html
docs/search/: search_index.json
src/vexy_lines/: CLAUDE.md  __init__.py  __version__.py  editor.py  parser.py  types.py
src_docs/: api-reference.md  changelog.md  examples.md  file-format.md  index.md  installation.md
testdata/: Chameleon.lines  Dragon.lines  airbrush-lettering7.260401-2312.1.lines  airbrush-lettering7.260401-2312.lines  airbrush-lettering7.260401-2313.lines  airbrush-lettering7.260401-2320.lines  airbrush-lettering7.lines  airbrush-lettering8a.260401-2325.lines  airbrush-lettering8a.260401-2327.lines  airbrush-lettering8a.260401-2338.lines  airbrush-lettering8a.260401-2348.lines  airbrush-lettering8a.260401-2351.1.lines  airbrush-lettering8a.260401-2351.lines  airbrush-lettering8a.260401-2353.lines  airbrush-lettering8a.260401-2358.1.lines  airbrush-lettering8a.260401-2358.lines  airbrush-lettering8a.260401-2359.lines  elephant.lines  girl-linear.lines  kitty.lines  trumpet2-2k-2.lines
tests/: CLAUDE.md  conftest.py  test_parser.py  test_types.py
